--- a/QJY.WEB/View_Mobile/UI/UI_GZBG_LIST.html
+++ b/QJY.WEB/View_Mobile/UI/UI_GZBG_LIST.html
@@ -68,7 +68,7 @@
                         </div>-->
                         <div class="card-header no-border" ms-on-click="showdetil(el)">
                             <div class="facebook-avatar">
-                                <img ms-src="{{ComFunJS.getfile()+'&type=TX&user='+el.CRUser}}" width="40" class="border-r">
+                                <img ms-src="{{ComFunJS.getfile()+'&type=TX&user='+el.CRUser}}" width="40" class="border-r" onerror="javascript: this.src = '/ViewV5/images/head.jpg'">
                             </div>
                             <div class="facebook-date head-ft16">{{ComFunJS.convusers(el.CRUser)}}<span class="ml10 c999 ft14" ms-if="!el.isfold">{{$.timeago(el.CRDate)}}</span></div>
                             <div class="facebook-date head-ft16" ms-if="el.isfold"><span class="c999 ft14">{{el.CRDate|date("MM月dd日")}}</span></div>
@@ -362,7 +362,7 @@
         })
 
         avalon.ready(function () {
-            // 注册'infinite'事件处理函数
+            // 注册'infinite'事件处理函数s
             $(document).on('infinite', '.infinite-scroll-bottom', function () {
                 model.loadMore();
             });
