--- a/QJY.WEB/View_Mobile/UI/UI_QYHD_LIST.html
+++ b/QJY.WEB/View_Mobile/UI/UI_QYHD_LIST.html
@@ -120,7 +120,7 @@
 
                         <div class="card-header no-border" ms-on-click="showdetil(el)">
                             <div class="facebook-avatar">
-                                <img ms-src="/View_Mobile/Images/icon/{{el.Type==0?'QYHD':'QYTP'}}.png" width="40" class="border-r">
+                                <img ms-src="/View_Mobile/Images/icon/{{el.Type==0?'QYHD':'QYTP'}}.png" width="40" class="border-r" onerror="javascript: this.src = '/ViewV5/images/head.jpg'">
                             </div>
                             <div class="facebook-date head-ft16">{{el.FQF}}<span class="ml10 c999 ft14" ms-if="!el.isfold">{{$.timeago(el.CRDate)}}</span></div>
                             <div class="facebook-date head-ft16" ms-if="el.isfold"><span class="c999 ft14">{{el.CRDate|date("MM月dd日")}}</span></div>
