--- a/QJY.WEB/View_Mobile/UI/UI_RWGL_LIST.html
+++ b/QJY.WEB/View_Mobile/UI/UI_RWGL_LIST.html
@@ -52,7 +52,7 @@
                         </div>-->
                         <div class="card-header no-border" ms-on-click="showdetil(el)">
                             <div class="facebook-avatar">
-                                <img ms-src="{{ComFunJS.getfile()+'&type=TX&user='+el.CRUser}}" width="40" class="border-r">
+                                <img ms-src="{{ComFunJS.getfile()+'&type=TX&user='+el.CRUser}}" width="40" class="border-r" onerror="javascript: this.src = '/ViewV5/images/head.jpg'">
                             </div>
                             <div class="facebook-date head-ft16"> {{ComFunJS.convuser(el.CRUser)}}<span class="ml10 c999 ft14" ms-if="!el.isfold">{{$.timeago(el.CRDate)}}</span></div>
                             <div class="facebook-date head-ft16" ms-if="el.isfold"><span class="c999 ft14">{{el.CRDate|date("MM月dd日")}}</span></div>
@@ -226,7 +226,7 @@
     <script src="/View_Mobile/JS/touch/toucher.js"></script>
     <script src="/View_Mobile/JS/avalon.mobile.min.js"></script>
     <script src="/View_Mobile/JS/raty/jquery.raty.js?v=1.3"></script>
-    <script src="/View_Mobile/JS/ComFunJS.js?jsver=20160425"></script>
+    <script src="/View_Mobile/JS/ComFunJS.js?jsver=20180425"></script>
     <script>
 
         var model = avalon.define({
@@ -470,7 +470,7 @@
             }
             model.getdata(model.type);
             //初始化微信配置
-            ComFunJS.initwxConfig();
+            // ComFunJS.initwxConfig();
         })
     </script>
 </body>
