--- a/QJY.WEB/View_Mobile/UI/UI_TXSX_LIST.html
+++ b/QJY.WEB/View_Mobile/UI/UI_TXSX_LIST.html
@@ -46,17 +46,10 @@
 
                     <div class="card facebook-card animated fadeInUp" ms-repeat-el="ctData">
                         <div class="ribbon-wrapper-green"><div class="ribbon-green">{{txfs(el)}}</div></div>
-                        <!--<div class="card-header no-border" ms-on-click="showdetil(el)">
-                            <div class="facebook-avatar"><img ms-src="/ToolS/DownFile.aspx?type=TX&user={{el.CRUser}}" style="border-radius: 3px;width:32px;height:32px"><div class="cadename" ms-if="!el.isfold">{{ComFunJS.convuser(el.CRUser)}}</div></div>
-                            <div class="facebook-date" ms-if="el.isfold">{{ComFunJS.convuser(el.CRUser)}}</div>-->
-                        <!--<div class="facebook-date">{{$.timeago(el.CRDate)}}</div>-->
-                        <!--<div class="facebook-date">{{el.CRDate|date("MM月dd日")}}</div>
-                            <div class="facebook-date" ms-if="!el.isfold" style="overflow: hidden; word-wrap: break-word; word-break: break-all; ">{{covtitle(txsz(el))}}</div>
-                            <div class="facebook-date" ms-if="!el.isfold" style="overflow: hidden; word-wrap: break-word; word-break: break-all; ">{{covtitle(el.TXContent)}}</div>
-                        </div>-->
+
                         <div class="card-header no-border" ms-on-click="showdetil(el)">
                             <div class="facebook-avatar">
-                                <img ms-src="{{ComFunJS.getfile()+'&type=TX&user='+el.CRUser}}" width="40" class="border-r">
+                                <img ms-src="{{ComFunJS.getfile()+'&type=TX&user='+el.CRUser}}" width="40" class="border-r" onerror="javascript: this.src = '/ViewV5/images/head.jpg'">
                             </div>
                             <div class="facebook-date head-ft16"> {{ComFunJS.convuser(el.CRUser)}}<span class="ml10 c999 ft14" ms-if="!el.isfold">{{$.timeago(el.CRDate)}}</span></div>
                             <div class="facebook-date head-ft16" ms-if="el.isfold"><span class="c999 ft14">{{el.CRDate|date("MM月dd日")}}</span></div>
