优化微信手机端加载逻辑，修复信息发布的部分Bug

--- a/QJY.WEB/View_Mobile/UI/UI_COMMON.html
+++ b/QJY.WEB/View_Mobile/UI/UI_COMMON.html
@@ -4,6 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no" />
     <title></title>
+    <script src="/View_Mobile/JS/layer/layer.m.js"></script>
     <script src="/View_Mobile/JS/zepto.min.js"></script>
     <script src="/View_Mobile/JS/ComFunJS.js?jsver=20160426"></script>
     <script>
