--- a/QJY.WEB/View_Mobile/UI/UI_XXFB_INDEXNEW.html
+++ b/QJY.WEB/View_Mobile/UI/UI_XXFB_INDEXNEW.html
@@ -14,6 +14,8 @@
     <link href="/View_Mobile/CSS/base.css?ver=1" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="/View_Mobile/CSS/animate.css">
     <link href="/View_Mobile/CSS/szhlextend.css?ver=20160904" rel="stylesheet" />
+    <script src="/View_Mobile/JS/layer/layer.m.js"></script>
+
     <style type="text/css">
         .ms-controller, [ms-controller] {
             display: none;
@@ -153,7 +155,7 @@
     <script>$.config = { autoInit: true }</script>
     <script type='text/javascript' src='//g.alicdn.com/msui/sm/0.5.8/js/sm.min.js' charset='utf-8'></script>
     <script src="/View_Mobile/JS/ComFunJS.js?jsver=20160425"></script>
-    <script src="/View_Mobile/JS/avalon.mobile.js"></script>
+    <script src="/View_Mobile/JS/avalon1.47.js"></script>
 
     <script type="text/javascript">
         var model = avalon.define({
