--- a/QJY.WEB/ViewV5/Base/FileSel.html
+++ b/QJY.WEB/ViewV5/Base/FileSel.html
@@ -7,7 +7,7 @@
     <!-- 上述3个meta标签*必须*放在最前面，任何其他内容都*必须*跟随其后！ -->
     <title>操作成功</title>
     <!-- Bootstrap -->
-    <link rel="stylesheet" href="//at.alicdn.com/t/font_1472974431_2340324.css">
+    <link rel="stylesheet" href="/ViewV5/CSS/icfont_qj/iconfont.css" />
     <link rel="stylesheet" type="text/css" href="/ViewV5/CSS/animate.css">
     <link href="/ViewV5/CSS/bootstrap3.3.5/css/bootstrap.css" rel="stylesheet">
     <link href="/ViewV5/CSS/BootOver.css" rel="stylesheet" />
