--- a/QJY.WEB/View_Mobile/UI/BASE/APP_MOBILE_APPLIST.html
+++ b/QJY.WEB/View_Mobile/UI/BASE/APP_MOBILE_APPLIST.html
@@ -7,7 +7,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <title></title>
-    <link rel="stylesheet" href="//g.alicdn.com/msui/sm/0.5.8/css/sm.min.css">
+    <link rel="stylesheet" href="/View_Mobile/CSS/msui.css">
     <style>
         .list-group-title {
             color: #777 !important;
