--- a/QJY.WEB/View_Mobile/UI/UI_LCSP_LCLIST.html
+++ b/QJY.WEB/View_Mobile/UI/UI_LCSP_LCLIST.html
@@ -8,8 +8,8 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
 
-    <link rel="stylesheet" href="//g.alicdn.com/msui/sm/0.5.8/css/sm.min.css">
-    <link rel="stylesheet" href="//g.alicdn.com/msui/sm/0.5.8/css/sm-extend.min.css">
+    <link rel="stylesheet" href="/View_Mobile/CSS/msui.css">
+    
     <style type="text/css">
         /*.ui-header {background-color: #06c1ae;color: #fff;}
         .ui-header h1{color:#fff;}
