--- a/QJY.WEB/View_Mobile/UI/UI_SWWH_INDEX.html
+++ b/QJY.WEB/View_Mobile/UI/UI_SWWH_INDEX.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>办公助手</title>
-    <link rel="stylesheet" href="//g.alicdn.com/msui/sm/0.5.8/css/sm.min.css">
-    <link rel="stylesheet" href="//g.alicdn.com/msui/sm/0.5.8/css/sm-extend.min.css">
+    <link rel="stylesheet" href="/View_Mobile/CSS/msui.css">
+    
     <link href="/ViewV5/CSS/weixin/index.css" rel="stylesheet" />
     <script src="/View_Mobile/JS/layer/layer.m.js"></script>
     <script src="/View_Mobile/JS/ComFunJS.js?jsver=20160425"></script>
