--- a/QJY.WEB/View_Mobile/UI/UI_ZHBG_INDEX.html
+++ b/QJY.WEB/View_Mobile/UI/UI_ZHBG_INDEX.html
@@ -7,7 +7,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <title>综合办公</title>
-    <link rel="stylesheet" href="//g.alicdn.com/msui/sm/0.5.8/css/sm.min.css">
+    <link rel="stylesheet" href="/View_Mobile/CSS/msui.css">
     <link href="//cdn.bootcss.com/font-awesome/4.5.0/css/font-awesome.css" rel="stylesheet" />
         <link href="/View_Mobile/js/layer/need/layer.css" rel="stylesheet" />
     <script src="/View_Mobile/js/layer/layer.m.js"></script>
