--- a/QJY.WEB/View_Mobile/UI/UI_ZHBG_NEWS.html
+++ b/QJY.WEB/View_Mobile/UI/UI_ZHBG_NEWS.html
@@ -7,7 +7,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <title>综合应用</title>
-    <link rel="stylesheet" href="//g.alicdn.com/msui/sm/0.5.8/css/sm.min.css">
+    <link rel="stylesheet" href="/View_Mobile/CSS/msui.css">
     <link href="../css/reset.css?11" rel="stylesheet" type="text/css">
     <link href="../css/base.css?22" rel="stylesheet" type="text/css">
     <style type="text/css">
