--- a/QJY.WEB/View_Mobile/zhang-new-page/about-us.html
+++ b/QJY.WEB/View_Mobile/zhang-new-page/about-us.html
@@ -9,8 +9,7 @@
 <meta name="apple-mobile-web-app-status-bar-style" content="black">
 <!-- Google Web Fonts -->
 
-<link rel="stylesheet" href="//g.alicdn.com/msui/sm/0.5.8/css/sm.min.css">
-<link rel="stylesheet" href="//g.alicdn.com/msui/sm/0.5.8/css/sm-extend.min.css">
+<link rel="stylesheet" href="/View_Mobile/CSS/msui.css">
 <link rel="stylesheet" type="text/css" href="//at.alicdn.com/t/font_1468636506_6208553.css">
 <link rel="stylesheet" type="text/css" href="/View_Mobile/CSS/add.css">
 <link href="/View_Mobile/UI/CRM/css/reset.css" rel="stylesheet" type="text/css">
