--- a/QJY.WEB/ViewV5/AppPage/APP_ADD_WF.html
+++ b/QJY.WEB/ViewV5/AppPage/APP_ADD_WF.html
@@ -12,7 +12,7 @@
     <!-- Bootstrap -->
     <link rel="stylesheet" type="text/css" href="/ViewV5/CSS/bootstrap3.3.5/css/bootstrap.css">
     <link href="/ViewV5/CSS/BootOver.css" rel="stylesheet" />
-    <link rel="stylesheet" href="//at.alicdn.com/t/font_eedtp7mde99q9f6r.css">
+    <link rel="stylesheet" href="/ViewV5/CSS/icfont_qj/iconfont.css">
     <link href="/ViewV5/JS/chosen/chosen.css" rel="stylesheet" />
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
