--- a/QJY.WEB/ViewV5/AppPage/DXGL/SelDXTemplate.html
+++ b/QJY.WEB/ViewV5/AppPage/DXGL/SelDXTemplate.html
@@ -3,7 +3,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title></title>
-    <link rel="stylesheet" href="//at.alicdn.com/t/font_eedtp7mde99q9f6r.css">
+    <link rel="stylesheet" href="/ViewV5/CSS/icfont_qj/iconfont.css">
     <link href="/ViewV5/CSS/bootstrap3.3.5/css/bootstrap.css" rel="stylesheet">
     <link href="/ViewV5/CSS/animate.css" rel="stylesheet" />
     <link href="/ViewV5/CSS/index.css" rel="stylesheet" />
