--- a/QJY.WEB/ViewV5/AppPage/HYGL/HYGLVIEW.html
+++ b/QJY.WEB/ViewV5/AppPage/HYGL/HYGLVIEW.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="//at.alicdn.com/t/font_1473753044_842232.css">
+    <link rel="stylesheet" href="/ViewV5/CSS/icfont_qj/iconfont.css" />
     <link rel="stylesheet" type="text/css" href="/ViewV5/CSS/bootstrap3.3.5/css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="/ViewV5/CSS/animate.css">
 
