--- a/QJY.WEB/ViewV5/Base/APP_COMMENT.html
+++ b/QJY.WEB/ViewV5/Base/APP_COMMENT.html
@@ -6,7 +6,7 @@
     <meta name="renderer" content="webkit">
     <title>评论</title>
 
-    <link rel="stylesheet" href="//at.alicdn.com/t/font_eedtp7mde99q9f6r.css">
+    <link rel="stylesheet" href="/ViewV5/CSS/icfont_qj/iconfont.css">
     <link rel="stylesheet" type="text/css" href="/ViewV5/CSS/bootstrap3.3.5/css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="/ViewV5/CSS/animate.css">
     <link rel="stylesheet" type="text/css" href="/ViewV5/CSS/index.css">
