--- a/QJY.WEB/ViewV5/Base/APP_IMPORT.html
+++ b/QJY.WEB/ViewV5/Base/APP_IMPORT.html
@@ -5,7 +5,7 @@
     <title>导入</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-    <link rel="stylesheet" href="//at.alicdn.com/t/font_eedtp7mde99q9f6r.css">
+    <link rel="stylesheet" href="/ViewV5/CSS/icfont_qj/iconfont.css">
     <link href="/ViewV5/CSS/bootstrap3.3.5/css/bootstrap.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="/ViewV5/CSS/animate.css">
     <link rel="stylesheet" type="text/css" href="/ViewV5/CSS/index.css">
