--- a/QJY.WEB/View_Mobile/UI/BASE/APP_MOBIL_WF.html
+++ b/QJY.WEB/View_Mobile/UI/BASE/APP_MOBIL_WF.html
@@ -7,11 +7,10 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <title></title>
-    <link rel="stylesheet" href="//g.alicdn.com/msui/sm/0.5.8/css/sm.min.css">
-    <link rel="stylesheet" href="//g.alicdn.com/msui/sm/0.5.8/css/sm-extend.min.css">
+    <link rel="stylesheet" href="/View_Mobile/CSS/msui.css">
     <link rel="stylesheet" type="text/css" href="/View_Mobile/CSS/animate.css">
     <link href="/View_Mobile/CSS/WFmain.css" rel="stylesheet" />
-    <link rel="stylesheet" type="text/css" href="//at.alicdn.com/t/font_1464255787_8152707.css">
+    <link rel="stylesheet" type="text/css" href="//at.alicdn.com/t/font_1476090774_8365302.css">
     <link href="/View_Mobile/CSS/add.css?ver=2" rel="stylesheet" />
     <style>
         .title {
