--- a/QJY.WEB/View_Mobile/UI/UI_CAR_INFO.html
+++ b/QJY.WEB/View_Mobile/UI/UI_CAR_INFO.html
@@ -7,8 +7,8 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <title>车辆信息</title>
-    <link rel="stylesheet" href="//g.alicdn.com/msui/sm/0.5.8/css/sm.min.css">
-    <link rel="stylesheet" href="//g.alicdn.com/msui/sm/0.5.8/css/sm-extend.min.css">
+    <link rel="stylesheet" href="/View_Mobile/CSS/msui.css">
+    
     <style type="text/css">
         .list-block .item-content {
             padding-left: 0.3em;
