--- a/QJY.WEB/View_Mobile/UI/UI_QYWD_LISTN.html
+++ b/QJY.WEB/View_Mobile/UI/UI_QYWD_LISTN.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <link rel="stylesheet" href="//g.alicdn.com/msui/sm/0.5.8/css/sm.min.css">
-    <link rel="stylesheet" href="//g.alicdn.com/msui/sm/0.5.8/css/sm-extend.min.css">
+    <link rel="stylesheet" href="/View_Mobile/CSS/msui.css">
+    
     <link href="/View_Mobile/CSS/animate.css" rel="stylesheet" />
 
 
