--- a/QJY.WEB/View_Mobile/UI/UI_QYWD_SC.html
+++ b/QJY.WEB/View_Mobile/UI/UI_QYWD_SC.html
@@ -6,8 +6,8 @@
     <title>我的收藏</title>
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
 
-    <link rel="stylesheet" href="//g.alicdn.com/msui/sm/0.5.8/css/sm.min.css">
-    <link rel="stylesheet" href="//g.alicdn.com/msui/sm/0.5.8/css/sm-extend.min.css">
+    <link rel="stylesheet" href="/View_Mobile/CSS/msui.css">
+    
     <link rel="stylesheet" type="text/css" href="css/animate.css">
     <link href="/View_Mobile/CSS/animate.css" rel="stylesheet" />
 
