--- a/QJY.WEB/View_Mobile/UI/UI_TSSQ_INDEX.html
+++ b/QJY.WEB/View_Mobile/UI/UI_TSSQ_INDEX.html
@@ -7,9 +7,9 @@
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <link rel="stylesheet" href="//g.alicdn.com/msui/sm/0.5.8/css/sm.min.css">
-    <link rel="stylesheet" href="//g.alicdn.com/msui/sm/0.5.8/css/sm-extend.min.css">
-    <link rel="stylesheet" type="text/css" href="//at.alicdn.com/t/font_1464664061_1061604.css">
+    <link rel="stylesheet" href="/View_Mobile/CSS/msui.css">
+    
+    <link rel="stylesheet" type="text/css" href="//at.alicdn.com/t/font_1476090774_8365302.css">
     <link href="/View_Mobile/CSS/szhlextend.css?ver=20160904" rel="stylesheet" />
     <!--<link rel="stylesheet" type="text/css" href="/View_Mobile/CSS/animate.css">-->
     <link rel="stylesheet" type="text/css" href="/View_Mobile/CSS/mob.css">
