--- a/QJY.WEB/View_Mobile/UI/UI_WQQD_LIST.html
+++ b/QJY.WEB/View_Mobile/UI/UI_WQQD_LIST.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <link rel="stylesheet" href="//g.alicdn.com/msui/sm/0.5.8/css/sm.min.css">
-    <link rel="stylesheet" href="//g.alicdn.com/msui/sm/0.5.8/css/sm-extend.min.css">
+    <link rel="stylesheet" href="/View_Mobile/CSS/msui.css">
+    
     <link href="//cdn.bootcss.com/font-awesome/4.5.0/css/font-awesome.css" rel="stylesheet" />
     <link href="/View_Mobile/CSS/szhlextend.css?ver=20160904" rel="stylesheet" />
     <!--<link rel="stylesheet" href="/View_Mobile/CSS/animate.css">-->
