--- a/QJY.WEB/View_Mobile/UI/UI_XXFB_LIST_SH.html
+++ b/QJY.WEB/View_Mobile/UI/UI_XXFB_LIST_SH.html
@@ -9,8 +9,8 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <link href="/View_Mobile/Frozenui1.3/css/frozen.css" rel="stylesheet" />
-    <link rel="stylesheet" href="//g.alicdn.com/msui/sm/0.5.8/css/sm.min.css">
-    <link rel="stylesheet" href="//g.alicdn.com/msui/sm/0.5.8/css/sm-extend.min.css">
+    <link rel="stylesheet" href="/View_Mobile/CSS/msui.css">
+    
 
     <style type="text/css">
         /*.ui-header {background-color: #06c1ae;color: #fff;}
