--- a/QJY.WEB/View_Mobile/zhang-new-page/LT-cont.html
+++ b/QJY.WEB/View_Mobile/zhang-new-page/LT-cont.html
@@ -9,8 +9,8 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <!-- Google Web Fonts -->
 
-    <link rel="stylesheet" href="//g.alicdn.com/msui/sm/0.5.8/css/sm.min.css">
-    <link rel="stylesheet" href="//g.alicdn.com/msui/sm/0.5.8/css/sm-extend.min.css">
+    <link rel="stylesheet" href="/View_Mobile/CSS/msui.css">
+    
     <link rel="stylesheet" type="text/css" href="//at.alicdn.com/t/font_1464664061_1061604.css">
 
     <link rel="stylesheet" type="text/css" href="/View_Mobile/CSS/animate.css">
