--- a/QJY.WEB/View_Mobile/UI/CRM/UI_KHGL_LIST.html
+++ b/QJY.WEB/View_Mobile/UI/CRM/UI_KHGL_LIST.html
@@ -86,7 +86,7 @@
                             <div class="card-item" ms-if="el.Files">
                                 <ul class="filelist">
                                     <li ms-repeat-file="el.FileList">
-                                        <img ms-class="mall_pcp:ComFunJS.isPic(file.FileExtendName)" class="" ms-on-click="viewfile(file)" ms-src="ComFunJS.getfile(file.ID)" />
+                                        <img ms-class="mall_pcp:ComFunJS.isPic(file.FileExtendName)" class="" ms-on-click="viewfile(file)" ms-src="ComFunJS.getfile(file.ID)" onerror="javascript: this.src = '/ViewV5/images/qywd/file.png'"/>
                                         <span class="fileinfo" ms-if="!ComFunJS.isPic(file.FileExtendName)">{{file.Name}}</span>
                                     </li>
                                 </ul>
@@ -125,7 +125,7 @@
                                                         <div class="card-content-inner" style="padding-top: 0; padding-top: 0.4rem; padding-bottom: 0;" ms-if="itemlxr.Files">
                                                             <ul class="filelist">
                                                                 <li ms-repeat-file="itemlxr.FileList">
-                                                                    <img ms-class="mall_pcp:ComFunJS.isPic(file.FileExtendName)" class="" ms-on-click="viewfile(file)" ms-src="ComFunJS.getfile(file.ID)" />
+                                                                    <img ms-class="mall_pcp:ComFunJS.isPic(file.FileExtendName)" class="" ms-on-click="viewfile(file)" ms-src="ComFunJS.getfile(file.ID)"  onerror="javascript: this.src = '/ViewV5/images/qywd/file.png'"/>
                                                                     <span class="fileinfo" ms-if="!ComFunJS.isPic(file.FileExtendName)">{{file.Name}}</span>
                                                                 </li>
                                                             </ul>
@@ -150,7 +150,7 @@
                                                     </h3>
                                                     <ul class="filelist">
                                                         <li ms-repeat-file="pl.FileList">
-                                                            <img ms-class="mall_pcp:ComFunJS.isPic(file.FileExtendName)" class="" ms-on-click="viewfile(file)" ms-src="ComFunJS.getfile(file.ID)" />
+                                                            <img ms-class="mall_pcp:ComFunJS.isPic(file.FileExtendName)" class="" ms-on-click="viewfile(file)" ms-src="ComFunJS.getfile(file.ID)" onerror="javascript: this.src = '/ViewV5/images/qywd/file.png'"/>
                                                             <span class="fileinfo" ms-if="!ComFunJS.isPic(file.FileExtendName)">{{file.Name}}</span>
                                                         </li>
                                                     </ul>
@@ -175,7 +175,7 @@
                                                         <div class="card-content-inner" style="padding-top: 0; padding-top: 0.4rem; padding-bottom: 0;" ms-if="itemht.Files">
                                                             <ul class="filelist">
                                                                 <li ms-repeat-file="itemht.FileList">
-                                                                    <img ms-class="mall_pcp:ComFunJS.isPic(file.FileExtendName)" class="" ms-on-click="viewfile(file)" ms-src="ComFunJS.getfile(file.ID)" />
+                                                                    <img ms-class="mall_pcp:ComFunJS.isPic(file.FileExtendName)" class="" ms-on-click="viewfile(file)" ms-src="ComFunJS.getfile(file.ID)" onerror="javascript: this.src = '/ViewV5/images/qywd/file.png'" />
                                                                     <span class="fileinfo" ms-if="!ComFunJS.isPic(file.FileExtendName)">{{file.Name}}</span>
                                                                 </li>
                                                             </ul>
