--- a/QJY.WEB/View_Mobile/UI/UI_HYGL_LIST.html
+++ b/QJY.WEB/View_Mobile/UI/UI_HYGL_LIST.html
@@ -159,7 +159,7 @@
                             </div>
                             <ul class="filelist" style="margin-left:.5rem;">
                                 <li ms-repeat-file="el.FileList">
-                                    <img ms-class="mall_pcp:ComFunJS.isPic(file.FileExtendName)" class="" ms-on-click="viewfile(file)" ms-src="/ViewV5/Base/DownFile.aspx?fileId={{file.ID}}">
+                                    <img ms-class="mall_pcp:ComFunJS.isPic(file.FileExtendName)" class="" ms-on-click="viewfile(file)" ms-src="{{ComFunJS.getfile(file.ID)}}" onerror="javascript: this.src = '/ViewV5/images/qywd/file.png'">
                                     <span class="fileinfo" ms-if="!ComFunJS.isPic(file.FileExtendName)">{{file.Name}}</span>
                                 </li>
                             </ul>          
@@ -203,7 +203,7 @@
                                                     <ul class="filelist">
                                                         <!--repeat428537517786-->
                                                         <li ms-repeat-file="pl.FileList">
-                                                            <img ms-class="mall_pcp:ComFunJS.isPic(file.FileExtendName)" class="" ms-on-click="viewfile(file)" ms-src="/ViewV5/Base/DownFile.aspx?fileId={{file.ID}}" />
+                                                            <img ms-class="mall_pcp:ComFunJS.isPic(file.FileExtendName)" class="" ms-on-click="viewfile(file)" ms-src="{{ComFunJS.getfile(file.ID)}}" onerror="javascript: this.src = '/ViewV5/images/qywd/file.png'" />
                                                             <span class="fileinfo" ms-if="!ComFunJS.isPic(file.FileExtendName)">{{file.Name}}</span>
                                                         </li>
                                                     </ul>
